# Giotto

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  index.html  main.py  pygbag_main.py  pyproject.toml
TrisAI/: agents.py  env_testing.py  fine_tuning.py  main.py  pyproject.toml  training.py
TrisAI/giotto/: env.py  qtable.pickle  qtable_v2.pickle  qtable_v3.pickle
css/: style.css
giotto/agents/: alphazero.py  alphazero_blind.py  bitbully.py  generic.py  giotto.py  human.py  mcts.py  minimax.py  random.py  value_net_agent.py
giotto/agents/algorithms/: mcts.py
giotto/agents/algorithms/alphazero/: config_c4.yaml  config_tris.yaml  mcts.py  net.py  net_numpy.py  train.py
giotto/agents/algorithms/value_net/: train.py  value_net.py  value_net_numpy.py
giotto/agents/models/connect4/: alphazero.npz  alphazero.pt  valuenet.npz  valuenet.pt
giotto/agents/models/tris/: alphazero.npz  alphazero.pt  valuenet.npz  valuenet.pt
giotto/connect4/game/: buttons.py  gameover_screen.py  main_menu.py  settings.py  states.py  texts.py
giotto/envs/: connect4.py  generic.py  tris.py
giotto/games/: connect4.py  generic.py  launcher.py  tris.py
giotto/games/settings/: agent_settings.py  settings_connect4.py  settings_global.py  settings_tris.py
giotto/games/ui/: __init__.py  buttons.py  gameover_screen.py  main_menu.py  player_types.py  states.py  texts.py
giotto/notebooks/: generate_dataset.ipynb  giotto_vs_solver.ipynb  play_giotto.ipynb  time_analysis.ipynb  visualize_alphazero.ipynb  visualize_augmentations.ipynb  visualize_training.ipynb
giotto/scripts/: _pygbag_main.py  initialized_game.py  play_game.py  play_n_games.py  run_pygame.py
giotto/tris/game/: buttons.py  gameover_screen.py  main_menu.py  settings.py  states.py  texts.py
giotto/utils/: bitbully_utils.py  convert_pt_to_npz.py  export_onnx.py  random_board.py  simmetries.py  text_play.py
js/engine/: agents.js  env-tris.js
js/ui/: board-connect4.js  board-tris.js  launcher.js  menu.js
models/: tris.onnx
src/giotto/: main.py
tests/: test_alphazero_numpy.py  test_envs.py  test_minimax.py  test_symmetries.py
web/js/: main.js
web/js/engine/: env-connect4.js  mcts.js
web/js/ui/: board-connect4.js  board-tris.js  gameover.js  menu.js
web/js/worker/: ai-worker.js
web/models/: connect4.onnx  tris.onnx
