[tool.poetry]
name = "giotto"
version = "1.0.0"
description = "Tic Tac Toe AI"
authors = ["Nicola Pesaresi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pandas = "^2.2.3"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
