[tool.poetry]
name = "giotto"
version = "2.0.0"
description = "Tic Tac Toe AI"
authors = ["Nicola Pesaresi"]
readme = "README.md"
packages = [{include = "giotto"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"
torch = "^2.5.1"
tqdm = "^4.67.1"
pygame = "^2.6.1"
pyyaml = "^6.0.3"
matplotlib = "^3.10.8"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
ghp-import = "^2.1.0"
pytest = "^9.0.2"


[tool.poetry.group.solver.dependencies]
bitbully = "^0.0.75"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# ruff already excludes many settings by default
# exclude = [
#   "..."
# ]
extend-include = []
# Target version refers to minimum python version supported
target-version = "py310"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pycodestyle
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-comprehensions
    "C4",
    # docstrings
    "D",
    # Pylint
    "PL",
]

ignore = [
    "B905",   # zip() without strict parameter
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring for magic method (def __*__)
    "D107",   # Missing docstring in __init__ 
    "D205",   # no blank line after summary line. Usually we violate this rule
    "E731",   # Do not assign a lambda expression, use a def
    "E741",   # Checks for the use of the characters 'l', 'O', or 'I' as variable names.
    "E402",   # Module level import not at top of file
    "SIM108", # https://github.com/astral-sh/ruff/issues/5528
    "SIM117", # Single with statement instead of multiple with statements
    # Pylint specific ignores
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0914", # too-many-locals
    "PLR0915", # too-many-statements
    "PLR1702", # too-many-nested-blocks
    "PLW1514", # unspecified-encoding
    "PLR2004", # magic-value-comparison
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# We don't want to enforce line length on notebooks
"*.ipynb" = ["E501"]
# Test files don't need docstrings
"tests/*.py" = ["D"]