[tool.poetry]
name = "giotto"
version = "0.1.0"
description = "AI for tic tac toe"
authors = ["Nicola Pesaresi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
numpy = "^2.1.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
